Store definitions instead of types/methods/... (#46)